Adding exe generation at the end of build